# maffb

./: .gitignore  EMAIL_SETUP.md  README.md  blog_summaries.md  env.example  pyproject.toml  requirements.txt  run_crew
.github/workflows/: cron_job.yaml
knowledge/: blog_sources.json  emailer_list.json
src/maffb/: crew.py  main.py
src/maffb/config/: agents.yaml  tasks.yaml
src/maffb/templates/: email_template.html  email_template.txt
src/maffb/tools/: __init__.py  emailer_tool.py  markdown_formatter_tool.py  readme_updater_tool.py  rss_feed_extractor_tool.py
src/maffb/tools/templates/: email_template.html
