[project]
name = "maffb"
version = "0.1.0"
description = "maffb using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.108.0,<1.0.0",
    "feedparser>=6.0.0",
    "sendgrid>=6.0.0",
    "jinja2>=3.0.0"
]

[project.scripts]
maffb = "maffb.main:run"
run_crew = "maffb.main:run"
train = "maffb.main:train"
replay = "maffb.main:replay"
test = "maffb.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
